# dcc_garch

./: .gitignore  README.md  pyproject.toml
dcc_garch/: __init__.py  dcc.py  univariate.py  utils.py
examples/: example_usage.py
