[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcc_garch"
version = "0.2.0"
description = "DCC(1,1)-GARCH (n>2) with Student-t, ADCC, rolling windows"
readme = "README.md"
authors = [{name="Your Name", email="you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.20", "scipy>=1.7", "pandas>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
