[project]
name = "dcc_garch"
version = "0.2.0"
description = "DCC(1,1)-GARCH (n>2) with Student-t, ADCC, rolling windows"
readme = "README.md"
authors = [{name="Your Name", email="you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"

# These caps keep you on versions that still ship wheels for Python 3.8
dependencies = [
  "numpy>=1.20,<2.0",
  "scipy>=1.7,<1.11",
  "pandas>=1.3,<2.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
